--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -1,10 +1,12 @@
 General:
   debug: 0
 HardCodedIntegrand:
-  type: unit_volume
-  n_dim: 9
+  #  type: unit_volume
+  #  n_3d_momenta: 11
+  type: loop_induced_TriBoxTri
+  supegraph_yaml_file: "./data/loop_induced_TriBoxTri.yaml"
 Integrator:
-  n_bins: 128
+  n_bins: 64
   min_samples_for_update: 1000
   n_start: 10000
   n_increase: 1000
@@ -13,7 +15,7 @@ Integrator:
   learning_rate: 1.5
   train_on_avg: false
 Kinematics:
-  e_cm: 1.0
+  e_cm: 10.0
 Parameterization:
   b: 1.0
   input_rescaling:
@@ -35,8 +37,8 @@ Parameterization:
         - 1.0
       - - 0.0
         - 1.0
-  mapping: linear
-  mode: hyperspherical
+  mapping: log
+  mode: hyperspherical_flat
   shifts:
     - - 1.0
       - 0.0
