--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -10,12 +10,12 @@ HardCodedIntegrand:
     power: 10
   threshold_CT_settings:
     enabled: true
-    variable: logR # options in this case are R and logR
+    variable: R # options in this case are R and logR
     sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
     h_function:
       function: exponential_ct # Options in this case is just exponential_ct
-      sigma: 5.
-      enabled_dampening: true
+      sigma: 1.
+      enabled_dampening: false
 # HardCodedIntegrand:
 #    type: unit_volume
 #    n_3d_momenta: 11
