--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -10,12 +10,19 @@ HardCodedIntegrand:
     power: 10
   threshold_CT_settings:
     enabled: true
-    variable: R # options in this case are R and logR
-    sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
-    h_function:
+    include_integrated_ct: true
+    variable: R # for the local CT: options in this case are R and logR
+    local_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
+    integrated_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
+    parameterization_center: [[0.0, 0.0, 0.0]]
+    local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 1.
       enabled_dampening: true
+    integrated_ct_h_function:
+      function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
+      sigma: 15.
+      power: 0
 # HardCodedIntegrand:
 #    type: unit_volume
 #    n_3d_momenta: 11
@@ -59,7 +66,7 @@ Parameterization:
       - - 0.0
         - 1.0
   mapping: linear
-  mode: spherical
+  mode: spherical # choices are cartesian, spherical, hyperspherical and hyperspherical_flat
   shifts:
     - - 1.0
       - 0.0
