--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -3,25 +3,26 @@ General:
 HardCodedIntegrand:
   type: loop_induced_TriBoxTri
   supegraph_yaml_file: ./data/loop_induced_TriBoxTri.yaml
-  q: [30.0, 0.0, 0.0, 0.0]
+  q: [60.0, 0.0, 0.0, 0.0]
   h_function:
     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
-    sigma: 5.
-    power: 10
+    sigma: 20.
+    power: 10 # Typically best to set to 3*n_loops+1
   threshold_CT_settings:
     enabled: true
     include_integrated_ct: true
+    compute_only_im_squared: false
     variable: R # for the local CT: options in this case are R and logR
     local_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
     integrated_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
     parameterization_center: [[0.0, 0.0, 0.0]]
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
-      sigma: 1.
+      sigma: 15.
       enabled_dampening: true
     integrated_ct_h_function:
       function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
-      sigma: 15.
+      sigma: 5.
       power: 0
 # HardCodedIntegrand:
 #    type: unit_volume
@@ -43,7 +44,7 @@ Integrator:
   train_on_avg: false
   show_max_wgt_info: true
 Kinematics:
-  e_cm: 30.0
+  e_cm: 60.0
 Parameterization:
   b: 1.0
   input_rescaling:
