--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -23,3 +23,8 @@ enum_dispatch = "*"
 git-version = "0.3"
 colored = "*"
 yaml-rust = "0.4"
+libc = "0.2.0"
+statrs = "0.16.0"
+
+[build-dependencies]
+cc = "1.0"
