--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -1,7 +1,7 @@
 General:
   debug: 0
 HardCodedIntegrand:
-  type: loop_induced_TriBoxTri
+  type: TriBoxTri
   supergraph_yaml_file: ./data/loop_induced_TriBoxTri.yaml
   q: [60.0, 0.0, 0.0, 0.0]
   h_function:
@@ -17,7 +17,7 @@ HardCodedIntegrand:
     variable: R # for the local CT: options in this case are R and logR
     local_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
     integrated_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
-    parameterization_center: [[0.0, 0.0, 0.0], [0.0, 0.0, 0.0]]
+    parameterization_center: [[0., 0., 0.], [0., 0., 0.]]
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 15.
@@ -26,6 +26,32 @@ HardCodedIntegrand:
       function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
       sigma: 5.
       power: 0
+# HardCodedIntegrand:
+#   type: loop_induced_TriBoxTri
+#   supergraph_yaml_file: ./data/loop_induced_TriBoxTri.yaml
+#   q: [60.0, 0.0, 0.0, 0.0]
+#   h_function:
+#     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
+#     sigma: 20.
+#     power: 10 # Typically best to set to 3*n_loops+1
+#   threshold_CT_settings:
+#     enabled: true
+#     include_integrated_ct: true
+#     compute_only_im_squared: false
+#     im_squared_through_local_ct_only: false
+#     include_amplitude_level_cts: true
+#     variable: R # for the local CT: options in this case are R and logR
+#     local_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
+#     integrated_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
+#     parameterization_center: [[0.0, 0.0, 0.0], [0.0, 0.0, 0.0]]
+#     local_ct_h_function:
+#       function: exponential_ct # Options in this case is just exponential_ct
+#       sigma: 15.
+#       enabled_dampening: true
+#     integrated_ct_h_function:
+#       function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
+#       sigma: 5.
+#       power: 0
 # HardCodedIntegrand:
 #   type: unit_volume
 #   n_3d_momenta: 11
