--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -2,7 +2,7 @@ General:
   debug: 0
 HardCodedIntegrand:
   type: TriBoxTri
-  supergraph_yaml_file: ./data/loop_induced_TriBoxTri.yaml
+  supergraph_yaml_file: ./data/TriBoxTri.yaml
   q: [60.0, 0.0, 0.0, 0.0]
   h_function:
     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
@@ -12,12 +12,12 @@ HardCodedIntegrand:
     enabled: true
     include_integrated_ct: true
     compute_only_im_squared: false
-    im_squared_through_local_ct_only: false
+    im_squared_through_local_ct_only: true
     include_amplitude_level_cts: true
     variable: R # for the local CT: options in this case are R and logR
     local_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
     integrated_ct_sliver_width: null # Specify an f64 for a finite sliver width, otherwise leave Option to null
-    parameterization_center: [[0., 0., 0.], [0., 0., 0.]]
+    parameterization_center: [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]] # [[3., -5., 1.], [2., 7., -3.], [2., -4., -1.]] # [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]]
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 15.
