--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -7,7 +7,7 @@ HardCodedIntegrand:
   numerator: one #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
   #sampling_basis: [1, 3, 6] # This is the generation LMB
   sampling_basis: [1, 4, 7] # This is the LMB with vertical edges in it
-  selected_sg_cff_term: 110 # e.g. 122 or null for enabling all
+  selected_sg_cff_term: 110 #110 # e.g. 122 or null for enabling all
   selected_cuts: null # e.g [0,3] or null for enabling all
   h_function:
     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
@@ -20,11 +20,12 @@ HardCodedIntegrand:
     im_squared_through_local_ct_only: false
     include_amplitude_level_cts: true
     variable: R # for the local CT: options in this case are R and logR
-    local_ct_sliver_width: 1 # Specify an f64 for a finite sliver width, otherwise leave Option to null
-    integrated_ct_sliver_width: 1 # Specify an f64 for a finite sliver width, otherwise leave Option to null
+    local_ct_sliver_width: 0.5 # Specify an f64 for a finite sliver width, otherwise leave Option to null
+    integrated_ct_sliver_width: 0.5 # Specify an f64 for a finite sliver width, otherwise leave Option to null
     parameterization_center: [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]] # [[3., -5., 1.], [2., 7., -3.], [2., -4., -1.]] # [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]]
     anti_observable_settings:
       enabled: true
+      enable_subspace_treatment_only_when_pinches_are_closest: true
       choose_subspace_based_off_other_e_surface_passing_cuts: true
       anti_select_cut_of_subtracted_e_surface: true
       anti_select_pinched_cut_same_side_as_subtracted_e_surface: false
@@ -92,7 +93,7 @@ Selectors:
   - type: jet
     min_jets: 2
     max_jets: 100
-    min_jpt: 5.0
+    min_jpt: 4.0
     min_j1pt: 0.
     max_j1pt: -1.
     dR: 0.7
