--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -4,7 +4,7 @@ HardCodedIntegrand:
   type: TriBoxTriCFF
   supergraph_yaml_file: ./data/TriBoxTri.yaml
   q: [60.0, 0.0, 0.0, 0.0]
-  numerator: one #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
+  numerator: spatial_exponential_dummy #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
   #sampling_basis: [1, 3, 6] # This is the generation LMB
   sampling_basis: [1, 4, 7] # This is the LMB with vertical edges in it
   selected_sg_cff_term: 110 #110 # e.g. 122 or null for enabling all
@@ -17,18 +17,19 @@ HardCodedIntegrand:
     enabled: true
     include_integrated_ct: false
     compute_only_im_squared: false
-    im_squared_through_local_ct_only: false
-    include_amplitude_level_cts: true
+    im_squared_through_local_ct_only: true
+    include_amplitude_level_cts: false
     variable: R # for the local CT: options in this case are R and logR
     local_ct_sliver_width: 0.5 # Specify an f64 for a finite sliver width, otherwise leave Option to null
     integrated_ct_sliver_width: 0.5 # Specify an f64 for a finite sliver width, otherwise leave Option to null
     parameterization_center: [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]] # [[3., -5., 1.], [2., 7., -3.], [2., -4., -1.]] # [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]]
     anti_observable_settings:
       enabled: true
-      enable_subspace_treatment_only_when_pinches_are_closest: true
+      enable_subspace_treatment_only_when_pinches_are_closest: 1.0 #null # enable always if null, otherwise enable only when min_pinch < min_non_pinch * this_value.
       choose_subspace_based_off_other_e_surface_passing_cuts: true
       anti_select_cut_of_subtracted_e_surface: true
       anti_select_pinched_cut_same_side_as_subtracted_e_surface: false
+      use_exact_cut_selection: true
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 15.
@@ -87,14 +88,14 @@ Kinematics:
 Parameterization:
   b: 1.0
   mapping: linear
-  mode: hyperspherical_flat # choices are cartesian, spherical, hyperspherical and hyperspherical_flat
-#Selectors: []
+  mode: spherical # choices are cartesian, spherical, hyperspherical and hyperspherical_flat
+# Selectors: []
 Selectors:
   - type: jet
     min_jets: 2
     max_jets: 100
-    min_jpt: 4.0
-    min_j1pt: 0.
+    min_jpt: 0.0
+    min_j1pt: 20.
     max_j1pt: -1.
     dR: 0.7
     use_fastjet: true
