--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -7,7 +7,7 @@ HardCodedIntegrand:
   numerator: spatial_exponential_dummy #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
   #sampling_basis: [1, 3, 6] # This is the generation LMB
   sampling_basis: [1, 4, 7] # This is the LMB with vertical edges in it
-  selected_sg_cff_term: 110 #110 # e.g. 122 or null for enabling all
+  selected_sg_cff_term: null #110 # e.g. 122 or null for enabling all
   selected_sector_signature: null # e.g. [-1,1,1,0,0,0,-1,1,1] or null for enabling all
   h_function:
     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
@@ -15,10 +15,10 @@ HardCodedIntegrand:
     power: 0 #10 # Typically best to set to 3*n_loops+1
   threshold_CT_settings:
     enabled: true
-    include_integrated_ct: false
-    compute_only_im_squared: false
-    im_squared_through_local_ct_only: true
-    include_amplitude_level_cts: false
+    include_integrated_ct: true
+    compute_only_im_squared: true
+    im_squared_through_local_ct_only: false
+    include_amplitude_level_cts: true
     variable: R # for the local CT: options in this case are R and logR
     local_ct_sliver_width: 0.3 # Specify an f64 for a finite sliver width, otherwise leave Option to null
     integrated_ct_sliver_width: 0.3 # Specify an f64 for a finite sliver width, otherwise leave Option to null
@@ -37,7 +37,7 @@ HardCodedIntegrand:
       apply_hard_coded_rules: true
       check_for_absent_e_surfaces_when_building_mc_factor: true
       mc_factor_power: -1.0
-      hard_coded_rules_file: ./data/auto_sectoring_rules_TriBoxTri.yaml #./data/sectoring_rules_TriBoxTri.yaml
+      hard_coded_rules_file: ./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri.yaml #./data/sectoring_rules_TriBoxTri.yaml #./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 15.
@@ -100,9 +100,9 @@ Parameterization:
 #Selectors: []
 Selectors:
   - type: jet
-    min_jets: 0
-    max_jets: 0
-    min_jpt: 22.0
+    min_jets: 2
+    max_jets: 2
+    min_jpt: 10.0
     min_j1pt: 0.
     max_j1pt: -1.
     dR: 0.7
