--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -4,10 +4,10 @@ HardCodedIntegrand:
   type: TriBoxTriCFFSectored
   supergraph_yaml_file: ./data/TriBoxTri.yaml
   q: [60.0, 0.0, 0.0, 0.0]
-  numerator: spatial_exponential_dummy #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
+  numerator: one #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
   #sampling_basis: [1, 3, 6] # This is the generation LMB
   sampling_basis: [1, 4, 7] # This is the LMB with vertical edges in it
-  selected_sg_cff_term: null #110 # e.g. 122 or null for enabling all
+  selected_sg_cff_term: 110 # e.g. 122 or null for enabling all
   selected_sector_signature: null # e.g. [-1,1,1,0,0,0,-1,1,1] or null for enabling all
   h_function:
     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
@@ -15,13 +15,13 @@ HardCodedIntegrand:
     power: 0 #10 # Typically best to set to 3*n_loops+1
   threshold_CT_settings:
     enabled: true
-    include_integrated_ct: true
-    compute_only_im_squared: true
-    im_squared_through_local_ct_only: false
-    include_amplitude_level_cts: true
+    include_integrated_ct: false
+    compute_only_im_squared: false
+    im_squared_through_local_ct_only: true
+    include_amplitude_level_cts: false
     variable: R # for the local CT: options in this case are R and logR
-    local_ct_sliver_width: 0.3 # Specify an f64 for a finite sliver width, otherwise leave Option to null
-    integrated_ct_sliver_width: 0.3 # Specify an f64 for a finite sliver width, otherwise leave Option to null
+    local_ct_sliver_width: 1.0 # Specify an f64 for a finite sliver width, otherwise leave Option to null
+    integrated_ct_sliver_width: 1.0 # Specify an f64 for a finite sliver width, otherwise leave Option to null
     parameterization_center: [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]] # [[3., -5., 1.], [2., 7., -3.], [2., -4., -1.]] # [[0., 0., 0.], [0., 0., 0.], [0., 0., 0.]]
     include_cts_solved_in_two_loop_space: true
     include_cts_solved_in_one_loop_subspace: true
@@ -36,8 +36,12 @@ HardCodedIntegrand:
       correlate_event_sector_with_ct_sector: false
       apply_hard_coded_rules: true
       check_for_absent_e_surfaces_when_building_mc_factor: true
-      mc_factor_power: -1.0
-      hard_coded_rules_file: ./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri.yaml #./data/sectoring_rules_TriBoxTri.yaml #./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml
+      mc_factor_power: -0.01
+      # FAIL WITH: ./data/auto_sectoring_rules_TriBoxTri_NO_TRUNCATED_TWO_LOOP_CTS.yaml (no truncated 2-loop 3-edge CT)
+      # ./target/release/betaloop -d 5 --n_start 100000 --n_increase 0 --n_max 10000000000 --config ../betaloop_config.yaml -c 16 inspect -p 0.2015485917610734, 0.0348120954706374, 0.1832479381391045, 0.1878431246994363, 0.9321586927735139, 0.0427575022102841, 0.1962131204926368, 0.6041683162519685, 0.3188234074406726
+      # FAIL WITH: /data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml (with truncated 2-loop 3-edge CT)
+      # ./target/release/betaloop -d 5 --n_start 100000 --n_increase 0 --n_max 10000000000 --config ../betaloop_config.yaml -c 16 inspect -p 0.2034072906022905, 0.3990988941367842, 0.4456709266243698, 0.2538964239180782, 0.3269982604593590, 0.1243520234452076, 0.1421118600647549, 0.5445192577004379, 0.9614897877985341
+      hard_coded_rules_file: ./data/auto_sectoring_rules_TriBoxTri.yaml # ./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri.yaml #./data/sectoring_rules_TriBoxTri.yaml #./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 15.
@@ -103,7 +107,7 @@ Selectors:
     min_jets: 2
     max_jets: 2
     min_jpt: 10.0
-    min_j1pt: 0.
+    min_j1pt: 13.0
     max_j1pt: -1.
     dR: 0.7
     use_fastjet: true
