--- a/betaloop_config_TriBoxTri_cff.yaml
+++ b/betaloop_config_TriBoxTri_cff.yaml
@@ -4,7 +4,7 @@ HardCodedIntegrand:
   type: TriBoxTriCFF
   supergraph_yaml_file: ./data/TriBoxTri.yaml
   q: [60.0, 0.0, 0.0, 0.0]
-  numerator: spatial_exponential_dummy #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
+  numerator: one #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
   #sampling_basis: [1, 3, 6] # This is the generation LMB
   sampling_basis: [1, 4, 7] # This is the LMB with vertical edges in it
   selected_sg_cff_term: 110 #110 # e.g. 122 or null for enabling all
@@ -93,9 +93,9 @@ Parameterization:
 Selectors:
   - type: jet
     min_jets: 2
-    max_jets: 100
-    min_jpt: 0.0
-    min_j1pt: 20.
+    max_jets: 2
+    min_jpt: 10.0
+    min_j1pt: 00.0
     max_j1pt: -1.
     dR: 0.7
     use_fastjet: true
