--- a/betaloop_config.yaml
+++ b/betaloop_config.yaml
@@ -7,7 +7,7 @@ HardCodedIntegrand:
   numerator: one #spatial_exponential_dummy # Options are "one", "spatial_exponential_dummy" and "physical"
   #sampling_basis: [1, 3, 6] # This is the generation LMB
   sampling_basis: [1, 4, 7] # This is the LMB with vertical edges in it
-  selected_sg_cff_term: 110 # e.g. 122 or null for enabling all
+  selected_sg_cff_term: null # e.g. 122 or null for enabling all
   selected_sector_signature: null # e.g. [-1,1,1,0,0,0,-1,1,1] or null for enabling all
   h_function:
     function: poly_left_right_exponential # Options are poly_exponential, poly_left_right_exponential, exponential
@@ -36,12 +36,13 @@ HardCodedIntegrand:
       correlate_event_sector_with_ct_sector: false
       apply_hard_coded_rules: true
       check_for_absent_e_surfaces_when_building_mc_factor: true
-      mc_factor_power: -0.01
+      mc_factor_power: -0.1 #-1.0e-99
+      pinch_protection_factor: 10.0
       # FAIL WITH: ./data/auto_sectoring_rules_TriBoxTri_NO_TRUNCATED_TWO_LOOP_CTS.yaml (no truncated 2-loop 3-edge CT)
       # ./target/release/betaloop -d 5 --n_start 100000 --n_increase 0 --n_max 10000000000 --config ../betaloop_config.yaml -c 16 inspect -p 0.2015485917610734, 0.0348120954706374, 0.1832479381391045, 0.1878431246994363, 0.9321586927735139, 0.0427575022102841, 0.1962131204926368, 0.6041683162519685, 0.3188234074406726
       # FAIL WITH: /data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml (with truncated 2-loop 3-edge CT)
       # ./target/release/betaloop -d 5 --n_start 100000 --n_increase 0 --n_max 10000000000 --config ../betaloop_config.yaml -c 16 inspect -p 0.2034072906022905, 0.3990988941367842, 0.4456709266243698, 0.2538964239180782, 0.3269982604593590, 0.1243520234452076, 0.1421118600647549, 0.5445192577004379, 0.9614897877985341
-      hard_coded_rules_file: ./data/auto_sectoring_rules_TriBoxTri.yaml # ./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri.yaml #./data/sectoring_rules_TriBoxTri.yaml #./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml
+      hard_coded_rules_file: ./data/auto_sectoring_rules_TriBoxTri.yaml #./data/auto_sectoring_rules_TriBoxTri_ORTHOGONAL_SPACE_WITH_PINCHED_VS_NON_PINCHED_DIFF_ONLY.yaml #./data/auto_sectoring_rules_TriBoxTri.yaml # ./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri.yaml #./data/sectoring_rules_TriBoxTri.yaml #./data/auto_sectoring_rules_TriBoxTri_supergraph_level_subtraction.yaml #./data/auto_sectoring_rules_TriBoxTri_amplitude_level_subtraction.yaml
     local_ct_h_function:
       function: exponential_ct # Options in this case is just exponential_ct
       sigma: 15.
@@ -104,10 +105,10 @@ Parameterization:
 #Selectors: []
 Selectors:
   - type: jet
-    min_jets: 2
-    max_jets: 2
+    min_jets: 0
+    max_jets: 0
     min_jpt: 10.0
-    min_j1pt: 13.0
+    min_j1pt: 15.0
     max_j1pt: -1.
     dR: 0.7
     use_fastjet: true
