--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-havana = {git = "https://github.com/benruijl/havana", features = ["gridplotting", "use_serde"]}
+symbolica = {version = "0.11.0"}
 serde = {version = "1.0", features = ["derive"]}
 serde_yaml = "*"
 clap = "2.34"
