--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -26,6 +26,8 @@ libc = "0.2.0"
 statrs = "0.16.0"
 smallvec = "1.7"
 itertools = "0.8"
+ref-ops = "0.2.5"
+rug = "1.25.0"
 
 [build-dependencies]
 cc = "1.0"
